# peewee

./: .gitignore  .readthedocs.yaml  .travis.yml  .travis_deps.sh  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  TODO.rst  Update to Maintain Compatibility  bench.py  cr1.py  cr2.py  cr3.py  p2.py  peewee.py  peewee3.py  pp1.py  prefetch_tests.py  pwiz.py  pyproject.toml  runtests.py  setup.py  test_peewee3.py  tests.py  tox.ini  weez.py
bench/: results  run_bench.py
docs/: Makefile  clubdata.sql  conf.py  index.rst  make.bat  requirements.txt
example/: app.py  requirements.txt  run_example.py  tweepee.db
examples/: adjacency_list.py  anomaly_detection.py  diary.py  fastapi_example.py  graph.py  hexastore.py  query_library.py  reddit_ranking.py  sqlite_fts_compression.py
extras/: apsw_ext.py  signals.py  sqlite_ext.py  sweepea.py  tests.py  tests_apsw.py
peewee-stubs/: __init__.pyi
playhouse/: README.md  _cysqlite_ext.pyx  _speedups.c  _speedups.pyx  _sqlite_ext.c  _sqlite_ext.pyx  _sqlite_udf.c  _sqlite_udf.pyx  apsw_ext.py  berkeley_build.sh  berkeleydb.py  clickhouse.py  cockroach.py  cockroachdb.py  csv_loader.py  csv_utils.py  cysqlite_ext.py  dataset.py  db_url.py  djpeewee.py  fast_strip_parens.pyx  fields.py  flask_utils.py  fts_parser.py  gfk.py  hybrid.py  json_field.py  kv.py  migrate.py  mysql_ext.py  pool.py  postgres_ext.py  proxy.py  pskel  psycopg3_ext.py  pwasyncio.py  pydantic_utils.py  pysqlite_ext.pyx  rds_ext.py  read_slave.py  (+36 more)
tests/: __init__.py  __main__.py  apsw_ext.py  base.py  base_models.py  cockroach.py  cockroachdb.py  dataset.py  (+48 more)
(+208 files in other folders)
