[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend="setuptools.build_meta"

[project]
name = "peewee"
dynamic = ["version"]
description = "a little orm"
readme = "README.rst"
authors = [
    { name = "Charles Leifer", email = "coleifer@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
pwiz = "pwiz:main"

[project.urls]
Repository = "https://github.com/coleifer/peewee"
Documentation = "https://docs.peewee-orm.com/"
Changelog = "https://github.com/coleifer/peewee/blob/master/CHANGELOG.md"

[project.optional-dependencies]
mysql = ["pymysql"]
postgres = ["psycopg2-binary"]
psycopg3 = ["psycopg[binary]"]

[tool.setuptools]
packages = ["playhouse", "playhouse._pysqlite"]
py-modules = ["peewee", "pwiz"]
exclude-package-data = {"playhouse" = ["*.pyx"]}

[tool.setuptools.dynamic]
version = { attr = "peewee.__version__" }
